Update launch configuration and enhance helloWorls.c with user input

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": true,
-      "cwd": ".",
-      "program": "build/Debug/outDebug",
+      "cwd": "c:/Users/Caroline Marinho/Documents/GitHubClone/CS50/week_01",
+      "program": "c:/Users/Caroline Marinho/Documents/GitHubClone/CS50/week_01/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
